--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<groupId>com.barclays</groupId>
 	<artifactId>rest-works</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
